Fixed for visualizzation mobile

--- a/src/components/SurveyView.css
+++ b/src/components/SurveyView.css
@@ -13,6 +13,10 @@
   padding: 4px;
 }
 
+.surveyView {
+  overflow: hidden;
+}
+
 .start p {
   font-size: 1.5rem;
   margin-bottom: 1.5rem;
